--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>WebDepPT1</title>
+  <link rel="stylesheet" href="regisform.css">
+</head>
 
+<body>
+  <div class="moscacontainer">
+    <h1>REGISTRATION FORM</h1>
+    <form action="#" method="post">
+      <div class="uinput">
+        <label>Full Name: </label>
+        <input type="text" required>
+       </div>
+       <div class="uinput">
+         <label>Age:</label>
+         <input type="number" required>
+       </div>
+       <div class="uinput">
+         <label> Birthday: </label>
+         <input type="date" required>
+       </div>
+       <div class="uinput">
+         <label>Address:</label>
+         <input type="text" required>
+       </div>
+       <div class="uinput">
+         <label> Contact Number:</label>
+         <input type="number" required>
+       </div>
+       <div class="uinput">
+         <input type="submit" value="Submit">
+       </div>
+     </form>
+   </div>
+
+</body>
+</html>      
+         
